# AutoBub3hs

./: .gitignore  AnalyzerUnit.cpp  AnalyzerUnit.hpp  AutoBubStart3.cpp  CMakeLists.txt  Environment-Graham.sh  FrameSorter.cpp  FrameSorter.hpp  README.md
AlgorithmTraining/: Trainer.cpp  Trainer.hpp
BubbleLocalizer/: L3Localizer.cpp  L3Localizer.hpp
LBP/: LBPUser.cpp
PICOFormatWriter/: PICOFormatWriterV3.cpp  PICOFormatWriterV3.hpp  PICOFormatWriterV4.cpp  PICOFormatWriterV4.hpp
ParseFolder/: ParseFolder.cpp  ParseFolder.hpp  Parser.hpp  RawParser.cpp  RawParser.hpp  ZipParser.cpp  ZipParser.hpp
common/: UtilityFunctions.cpp
